components/block/blockWrapper/block.module.scss
/** @define block */

.block {
	// @apply py-xl-5xl border-b-1; //with white border
	@apply py-xl-5xl overflow-hidden; //without

	&__inner {
		@apply w-9/10 max-w-7xl mx-auto;
	}
}

.spacing {
	&--none {
		@apply py-0;
	}
	&--small {
		@apply pt-0;
	}
}

